--- a/templates/default/home.jinja
+++ b/templates/default/home.jinja
@@ -75,6 +75,9 @@
           <a href="{{ url_for('nereid.website.home') }}" class="active">
             {% trans %}Home{% endtrans %}<span>&nbsp;</span>
           </a>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
 </body>
